Fix to category list spacing

--- a/src/components/CategoryList/CategoryList.sass
+++ b/src/components/CategoryList/CategoryList.sass
@@ -7,10 +7,11 @@
 
 .categorylist-cat--item
     text-transform: capitalize
+    margin-bottom: 10px !important
     a
         color: black !important
         &:hover
-            text-transform: underline !important
+            text-decoration: underline !important
         &:visited
             color: black
 
